--- a/frontend-assignment-1/src/App.module.css
+++ b/frontend-assignment-1/src/App.module.css
@@ -34,3 +34,11 @@
 .countInput {
   flex-grow: 1;
 }
+
+.footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
